# CompTech

./: .gitignore  README.md
ass2/: CMakeLists.txt  REPORT.md
ass2/Task3_Sanja/: CMakeLists.txt  binaryCounter.S
ass2/Task4_Sanja/: sdklink.c
ass2/task1/: HelloWorld.S
ass2/task2/: CMakeLists.txt  flashledssdk.S
ass2/task3/: CMakeLists.txt  ledcountersdk.S  sdklink.c
ass2/task4/: CMakeLists.txt  DisplayCounterSDK.S  ledcountersdk.S  sdklink.c
ass3/: REPORT.md
ass3/task1/: CMakeLists.txt  HelloWorld.S
ass3/task1/v1/: AverageArrayValue.S
ass3/task2/: CMakeLists.txt  SimpleButtonsOneSDK.S  sdklink.c
ass3/task3/: CMakeLists.txt  DisapointmentSDK.S  SimpleButtonsTwoSDK.S  sdklink.c
ass3/task3-disgusting/: DisapointmentSDK.S
ass3/task3-michelle/: CMakeLists.txt  SimpleButtonsTwoSDK.S
ass4/: Report.md
ass4/task1/a/: ButtonSDK.S  ButtonSDK.c  sdklink.c
ass4/task1/b/: ButtonSDK.c  CMakeLists.txt
ass4/task1/c/: ButtonSDK.c  CMakeLists.txt  sdklink.c
ass4/task2/: BinaryCounterSDK.S  BinaryCounterSDK.c  CMakeLists.txt
ass4/task3/: CMakeLists.txt
assignment-2/Task1/: HelloWorld.S
assignment-2/Task2/: flashledssdk.S
assignment-2/Task3/: binaryCounter.S  flashledssdk.S
assignment-2/Task4/: CMakeLists.txt  sevenSegmentDisplay.S
assignment-3/: Report.md
assignment-3/Task1/: AverageValue.S  CMakeLists.txt
assignment-3/Task2/: CMakeLists.txt  LedPushbuttons.S  sdklink.c
assignment-3/Task3/: CMakeLists.txt  SecondLedPushbuttons.S  sdklink.c
testing_playground/: binary_values.c
testing_playground/ass3-task1-v2/: AverageArrayValue.S
testing_playground/failed-files-ass3-task3/: DisapointmentSDK.S  SimpleButtonsTwoSDK.S
