cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)
project(AvergaValue C CXX ASM)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

include_directories(${CMAKE_SOURCE_DIR})

add_executable(AverageValue
  AverageValue.S
)

pico_enable_stdio_uart(AverageValue 0)
pico_enable_stdio_usb(AVergaeValue 1)

pico_add_extra_outputs(AverageValue)

target_link_libraries(AverageValue pico_stdlib)
